# different

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
include/different/: different.h
test/: testDifferent.cpp
